# ProjetoMoveis

./: README.md  pyproject.toml
clientes/: admin.py  models.py  serializers.py  urls.py  views.py
clientes/migrations/: 0001_initial.py  0002_rename_meumodelo_meusids.py  0003_rename_meusids_id.py  0004_rename_id_id_cliente.py  0005_nome_cliente.py  0006_cpf_cliente_delete_id_cliente.py  0007_cliente_delete_cpf_cliente_delete_nome_cliente.py  0008_cliente_cep.py  0009_remove_cliente_id_alter_cliente_cpf.py  0010_remove_cliente_cep_cliente_endereco.py  0011_funcionario_itempedido_materiaprima_produto_and_more.py  0012_remove_funcionariohasproduto_funcionario_and_more.py
config/: settings.py  urls.py
